added base styles

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jobly - Browse jobs by title or company</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      margin: 0;
+      height: 100%;
+      width: 100%,
+    }
+    a {
+      text-decoration: none;
+    }
+  </style>
+  <title>Jobly - Browse jobs by title or company</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
