removed redundant code around styles

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <style>
     body {
       margin: 0;
-      height: 100%;
-      width: 100%,
+      text-align: center;
     }
     a {
       text-decoration: none;
